[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/Tree.png" type="Texture" id=1]
[ext_resource path="res://actors/tree/Tree.gd" type="Script" id=2]
[ext_resource path="res://assets/StarParticle.png" type="Texture" id=3]
[ext_resource path="res://assets/LargeAura64.png" type="Texture" id=4]
[ext_resource path="res://shaders/ColorCharge.gdshader" type="Shader" id=5]

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 5 )
shader_param/color_amount = 0.0

[sub_resource type="CircleShape2D" id=5]
radius = 48.0

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 22 )

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0.00877193, 0.105263, 0.837719, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Light2D:texture_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Light2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "complete"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Light2D:texture_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.8, 1.3, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.01, 1.5, 0.8, 10.0, 1.5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Light2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.8, 1.3, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 1.2, 1.0, 2.0, 1.0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "idle"

[node name="Tree" type="Node2D"]
script = ExtResource( 2 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 4 )
texture_scale = 1.5

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 3 )
texture = ExtResource( 1 )

[node name="LightArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LightArea2D"]
shape = SubResource( 5 )

[node name="HitArea2D" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea2D"]
position = Vector2( -1, 10 )
shape = SubResource( 1 )

[node name="CompletionParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 64
lifetime = 2.0
one_shot = true
texture = ExtResource( 3 )
emission_shape = 2
emission_rect_extents = Vector2( 28, 28 )
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 5.0
initial_velocity_random = 1.0
orbit_velocity = 0.01
angle = 720.0
angle_random = 1.0
scale_amount = 0.1
scale_amount_random = 0.2
color_ramp = SubResource( 4 )

[node name="AliveParticles" type="CPUParticles2D" parent="."]
emitting = false
texture = ExtResource( 3 )
emission_shape = 2
emission_rect_extents = Vector2( 28, 28 )
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 5.0
initial_velocity_random = 1.0
orbit_velocity = 0.01
angle = 720.0
angle_random = 1.0
scale_amount = 0.1
scale_amount_random = 0.2
color_ramp = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 6 )
anims/complete = SubResource( 7 )
anims/idle = SubResource( 8 )

[connection signal="body_entered" from="LightArea2D" to="." method="_on_LightArea2D_body_entered"]
[connection signal="body_exited" from="LightArea2D" to="." method="_on_LightArea2D_body_exited"]
[connection signal="area_entered" from="HitArea2D" to="." method="_on_Area2D_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
